@@ -1,0 +1,12 @@
+[Desktop Entry]
+Name=Network Configuration
+Comment=Network Manager configuration
+Icon=nm-device-wireless
+Exec=nm-connection-editor
+Terminal=false
+Type=Application
+X-GNOME-Bugzilla-Bugzilla=GNOME
+X-GNOME-Bugzilla-Product=NetworkManager
+X-GNOME-Bugzilla-Component=general
+Categories=GNOME;GTK;Settings;X-SuSE-ControlCenter-System;
+OnlyShowIn=GNOME;
