@@ -1,3 +1,7 @@
+2008-10-10  Tambet Ingo  <tambet@gmail.com>
+
+	* nm-connection-editor.desktop: Add.
+
 2008-10-09  Dan Williams  <dcbw@redhat.com>
 
 	* src/gconf-helpers/gconf-helpers.c
